<resources>
    <string name="app_name">Eden - YouTube Example</string>

    <string name="DEVELOPER_KEY">AIzaSyA9cbrHnyMsZllw-DRFFDXf7nwjm15lQ4s</string>

    <string name="video_list_title">Title</string>
    <string name="error_init_failure">Initialization failure: Unable to play video</string>
    <string name="youtube_activity_fragment_placeholder">The YouTube Fragment can be placed anywhere
        in a layout. You could use this space to describe the video, load some comments or anything else you can think of.
    The benefit of using a Fragment is that your hosting Activity can be of any type.</string>
    <string name="youtube_activity_placeholder">If you don\'t want to use a Fragment,
        you can simply add a YouTubePlayerView to your layout file and handle it the same way.</string>
    <string name="player_style">Player Style</string>
    <string name="def">Default</string>
    <string name="minimal">Minimal</string>
    <string name="chromeless">Chromeless</string>
    <string name="play">PLAY</string>
    <string name="pause">PAUSE</string>

</resources>
